--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>workflow</artifactId>
   <name>workflow</name>
   <description>Java Library for handling Workflows and StateMachines</description>
-  <url>https://github.com/isfett/maven-workflow</url>
+  <url>https://github.com/isfett/java-workflow</url>
 
   <version>1.0.0-SNAPSHOT</version>
 
@@ -74,7 +74,7 @@
         <extensions>true</extensions>
         <configuration>
           <serverId>ossrh</serverId>
-          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
       </plugin>
@@ -87,6 +87,19 @@
             <id>attach-sources</id>
             <goals>
               <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
             </goals>
           </execution>
         </executions>
@@ -156,21 +169,6 @@
       <groupId>guru.nidi</groupId>
       <version>0.18.1</version>
     </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>2.19.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>2.19.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>2.19.0</version>
-    </dependency>
   </dependencies>
 
   <licenses>
@@ -190,4 +188,11 @@
       <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
+
+  <scm>
+    <connection>scm:git:git://github.com/isfett/java-workflow.git</connection>
+    <developerConnection>scm:git:ssh://github.com:isfett/java-workflow.git</developerConnection>
+    <url>http://github.com/isfett/java-workflow/tree/main</url>
+  </scm>
+
 </project>
